# h_mat

./: Cargo.toml  README.md
src/: h_mat.rs  lib.rs
src/h_mat/: access_col.rs  access_row.rs  extend.rs  h_col.rs  h_mat_ref.rs  iterator.rs  place_col.rs  reform.rs  reformer.rs  row.rs  slicer.rs  writer.rs
src/h_mat/h_col/: sub_col.rs
src/h_mat/h_mat_ref/: reformer.rs  sculptor.rs
src/h_mat/writer/: merge.rs  new_writer.rs  row_mod.rs  sub_writer.rs
